Fixes #60